Fixed note list horizontal scroll issue

--- a/src/app/components/notes/notes.component.scss
+++ b/src/app/components/notes/notes.component.scss
@@ -18,7 +18,7 @@
   height: 48px;
   display: flex;
   flex-direction: row;
-  width: calc(100vw - 350px);
+  width: calc(100vw - 352px);
   cursor: default !important;
 }
 
